# Xorshift

./: README.markdown  xorshift.cabal
src/Random/: Xorshift.hs
src/Random/Xorshift/: Int32.hs  Int64.hs
