name: xorshift
version: 2.0.2
Cabal-Version: >= 1.6
build-type: Simple

license: OtherLicense
copyright: ©2013 Robert Clausecker
license-file: "COPYING"

author: Robert Clausecker  <fuzxxl@gmail.com>
bug-reports: https://github.com/fuzxxl/Xorshift/issues
maintainer: Robert Clausecker
homepage: https://github.com/fuzxxl/Xorshift

stability: stable
package-url:
synopsis: Haskell implementation of the xorshift random generator.
description: The Xorshift random generator is a very fast generator that uses
    only XOR and bitshifting operations. This package contains a basic version
    with a periode of 2^32-1 for 32-bit numbers and a version with a periode of
    2^64-1 for 64-bit numbers.
    .
    The author did not the random generator, but according to it's specification
    the resulting numbers are of good quality.
    .
    The package is licensed under the terms and conditions of the WTFPL 2.0.

category: Math

library
  build-depends: base >= 3 && < 5, random -any, time -any
  exposed-modules: Random.Xorshift Random.Xorshift.Int32 Random.Xorshift.Int64
  exposed: True
  extensions: CPP, GeneralizedNewtypeDeriving
  hs-source-dirs: src
  buildable: True

source-repository head
  type:     git
  location: git://github.com/fuzxxl/Xorshift.git

source-repository this
  type:     git
  location: git://github.com/fuzxxl/Xorshift.git
  tag:      release-2.0.1
